corrected lines of code and added if statements and multiple Var items

--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
         </div>
       </div>
     </div>
-    <script src="C:\Users\sovie\bootcamp\challenges\Challenge3-Password-Generator\assets\js\script.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
